# PyICe

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  add_all_doctests.py  add_all_doctests_old.py  add_all_doctests_v2.py  conftest.py  new_button.py  pyproject.toml  upgrade_twi_doctests.py
.github/workflows/: lint.yml  pylint.yml  python-app.yml  python-publish.yml  static.yml  tests.yml
PyICe/: LTC_plot.py  __init__.py  foo.py  ipxact_parser.py  lab_core.py  lab_gui.py  lab_interfaces.py  logo.py  spi_instrument.py  spi_interface.py  test_lab_core.py  twi_instrument.py  twi_interface.py  virtual_instruments.py  visa_wrappers.py
PyICe/bench_configuration_management/: bench_configuration_management.py  bench_visualizer.py  lab_components.py
PyICe/data_utils/: EMI_char_levels.py  LTCPlotBokehAdapter.py  LTspice_waveform_reader.py  create_user_files.py  ena_data_dump.py  instrument_data_dump.py  oscilloscope_tools.py  oscilloscope_waveform_dump.py  pattern_generators.py  pds_utils.py  signal_generator.py  spectrum_analyzer.py  stdf_structure_tracer.py  stdf_utils.py  touchstone_utils.py  units_conversions.py  units_parser.py  vcd_utils.py  wave_analysis.py
PyICe/lab_instruments/: AD5259.py  AD5272.py  AD5667R.py  AD5693R.py  ADT7410.py  BR24H64.py  CAT5140.py  EL34143A.py  ENA.py  Franken_oven.py  PCF8574.py  PSA.py  TDS640A.py  TMP117.py  TestEquity_115.py  __init__.py  a3497x_instruments.py  agilent_3034a.py  agilent_33220a.py  agilent_34401a.py  agilent_3458a.py  agilent_35670a.py  agilent_8110a.py  agilent_81110a.py  agilent_e3631a.py  agilent_e364xa.py  agilent_e36xxa.py  agilent_e4433b.py  agilent_e53181a.py  agilent_n3301.py  autonicstk.py  bk8500.py  bk8600.py  bus_pirate_gpio.py  chroma_63600.py  daq970a_instruments.py  data_precision_8200.py  delta_9039.py  firmata.py  fluke_45.py  (+51 more)
PyICe/lab_utils/: StreamWindow.py  __init__.py  ascii_unicode_approx_table.py  banners.py  bounded.py  clean_ascii_code.py  clean_c.py  clean_sql.py  clean_unicode.py  column_formatter.py  communications.py  csv_logger.py  csv_to_recarray.py  csv_writer.py  debug_log.py  decimate.py  delay_loop.py  delete_file.py  detrend.py  differential_nonlinearity.py  digital_IO_over_analog_output.py  dlog.py  dont_print.py  egg_timer.py  eng_string.py  expand_tabs.py  float_distance.py  float_next.py  float_prior.py  integral_nonlinearity.py  interpolating_spline.py  interpolator.py  isclose.py  logfile.py  logger_time_str.py  modulate.py  ordered_pair.py  ordinalize.py  oscilloscope_channel.py  parse_list.py  (+29 more)
PyICe/models/: bandgap.py  comparator.py  loadpulser.py  power_loss_models.py
PyICe/plugins/: ProjectCreatorWizard.py  bench_maker.py  default_special_actions.py  master_test_template.py  (+4 more)
PyICePad/: create PyICepad.bat
Tests/: README.md  conftest.py  data_log.sqlite  data_log_LTC6363.sqlite  doctest_coverage.py  temp_sensor.sqlite  test_Franken_oven.py  test_agilent_n3301.py  test_caching.py  test_calibrator.py  test_channel_master.py  test_data_utils.py  test_delay_loop.py  test_detrend_decimate.py  test_digital_analog_IO.py  test_doctests.py  test_email.py  test_ena.py  test_expect.py  test_filter.py  test_firmata.py  test_gui.py  test_hmp4040.py  test_humanoid.py  test_ipxact_parser.py  test_lab_core.py  test_lab_instruments.py  test_lab_utils_more.py  test_lab_utils_numeric.py  test_lab_utils_strings.py  test_labcomm_packet_parser.py  test_labcomm_serial_to_DC2038A_ltc4162.py  test_labcomm_serial_to_DC2709A_ltc4021.py  test_logger.py  test_logger_unit.py  test_ltc_plot.py  test_oscilloscope.py  test_parameter_analyzer.py  test_partial_read.py  test_plugin_test_results.py  (+26 more)
docs/: PyICe.deps.RL1000.rst  PyICe.deps.RL1009.rst  PyICe.deps.keithley_kxci.rst  PyICe.deps.modbus.rst  PyICe.deps.rst  PyICe.deps.usbtmc.rst  PyICe.deps.vxi11.rst  PyICe.refid_modules.rst  PyICe.rst  PyICe.xml_registers.EXAMPLE.rst  PyICe.xml_registers.cpp_ets_api.rst  PyICe.xml_registers.datasheet_indesign.rst  PyICe.xml_registers.doc.rst  PyICe.xml_registers.register_lint.rst  PyICe.xml_registers.rst  PyICe.xml_registers.sanitize.EXAMPLE.rst  PyICe.xml_registers.variants.rst  PyICe.xml_registers.verilog_header.rst  conf.py  index.rst  modules.rst
requirements/: dev-requirements.txt  requirements.txt
(+257 files in other folders)
