[build-system]
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name='PyICe-ADI'
#packages=find_packages(include=['src'])
requires-python = ">=3.10,<3.11"
readme='README.md'
authors=[
    {name='Dave Simmons', email='david.simmons@analog.com'},
]
description='A Python package to aid in evaluating integrated circuits using standard electronics laboratory equipment'
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
]
dynamic = ["version"]

dependencies=[
    "cairosvg",
    "PySide2",
    "bokeh",
    "deprecated==1.2.12",
    "graphviz",
    "jsonc-parser",
    "labcomm",
    "matplotlib>=3.6.0",
    "minimalmodbus",
	"numpy<2",
    "nifgen",
    "objutils==0.6.4",
    "openpyxl",
    "pandas",
    "pybind11",
    "pycairo",
    "PyPDF2",
    "pyserial==3.4",
    "pysocks",
    "pystdf",
    "python-usbtmc",
    "python-vxi11",
    "pyusb",
    "pyvisa",
    "pywin32 ; platform_system == \"Windows\"",
    "reportlab",
    "requests",
    "scikit_rf",
    "scipy>=1.7 ",
    "statsmodels",
    "svglib",
    "windows-curses==2.3.1 ; platform_system == \"Windows\"",
    "xlrd",
    "xlsxwriter",
]

#dynamic = ["version"]
[tool.hatch.version]
path = "PyICe/__init__.py"

[tool.hatch.build]
include = [
    "/PyICe",
]

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "pytest-mock", "pytest-cov", "sphinx", "sphinx_rtd_theme"]
#[tool.hatch.envs.default]
#dependencies = ["pytest", "pytest-mock"]
[tool.hatch.build.targets.sdist]
exclude = [
    "exe/",
    "/PyICe/Docs/",
    "/PyICe/examples/",
#    "/PyICe/deps/"
]

[tool.hatch.build.targets.wheel]
exclude = [
    "exe/",
    "/PyICe/Docs/",
    "/PyICe/examples/",
#    "/PyICe/deps/"
]