[build-system]
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name='PyICe-ADI'
#packages=find_packages(include=['src'])
requires-python = ">=3.10, <3.15" #windows-curses support not yet implemented for 3.15 as of 2026/01/21
readme='README.md'
authors=[
    {name='Dave Simmons', email='david.simmons@analog.com'},
]
description='A Python package to aid in evaluating integrated circuits using standard electronics laboratory equipment'
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.14',
]
dynamic = ["version"]

dependencies=[
    "cairosvg",
    "PySide6; python_version >= \"3.11\"",
    "PySide2; python_version < \"3.11\"",
    "bokeh",
    "deprecated", #testing. Was previously held back to ==1.2.12
    "graphviz",
    "jsonc-parser",
    "labcomm",
    "matplotlib>=3.6.0",
    "minimalmodbus",
    "numpy",
    "nifgen",
    "objutils==0.6.4", #later versions through 0.8.7 won't run build script without crash
    "openpyxl",
    "pandas",
    "vcdvcd",
    "pybind11",
    "pycairo",
    "PyPDF2",
    "pyserial", #testing. Was previously held back to ==3.4
    "pysocks",
    "pystdf",
    "python-usbtmc",
    "python-vxi11",
    "pyusb",
    "pyvisa",
    "pywin32 ; platform_system == \"Windows\"",
    "reportlab",
    "requests",
    "scikit_rf",
    "scipy>=1.7 ",
    "statsmodels",
    "svglib",
    "windows-curses",
    "xlrd",
    "xlsxwriter",
]

#dynamic = ["version"]
[tool.hatch.version]
path = "PyICe/__init__.py"

[tool.hatch.build]
include = [
    "/PyICe",
]

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "pytest-mock", "pytest-cov", "sphinx", "sphinx_rtd_theme"]
#[tool.hatch.envs.default]
#dependencies = ["pytest", "pytest-mock"]
[tool.hatch.build.targets.sdist]
exclude = [
    "exe/",
    "/PyICe/Docs/",
    "/PyICe/examples/",
#    "/PyICe/deps/"
]

[tool.hatch.build.targets.wheel]
exclude = [
    "exe/",
    "/PyICe/Docs/",
    "/PyICe/examples/",
#    "/PyICe/deps/"
]